# Map-based-Global-Localization-Using-LiDAR-and-Deep-Neural-Network

./: README.md
deep_neural_network/: README.md  convert_to_onnx.py  dataset_vizualization.py  localization_model.pth
deep_neural_network/dataset/1/input/: scan.npz
deep_neural_network/dataset/10/input/: scan.npz
deep_neural_network/dataset/10/output/: pose.txt
deep_neural_network/dataset/100/input/: scan.npz
deep_neural_network/dataset/100/output/: pose.txt
deep_neural_network/dataset/12/input/: scan.npz
deep_neural_network/dataset/12/output/: pose.txt
deep_neural_network/dataset/14/input/: scan.npz
deep_neural_network/dataset/14/output/: pose.txt
deep_neural_network/dataset/15/input/: scan.npz
deep_neural_network/dataset/16/input/: scan.npz
deep_neural_network/dataset/17/output/: pose.txt
deep_neural_network/dataset/18/output/: pose.txt
deep_neural_network/dataset/19/output/: pose.txt
deep_neural_network/dataset/2/input/: scan.npz
deep_neural_network/dataset/2/output/: pose.txt
deep_neural_network/dataset/21/input/: scan.npz
deep_neural_network/dataset/21/output/: pose.txt
deep_neural_network/dataset/22/input/: scan.npz
deep_neural_network/dataset/23/input/: scan.npz
deep_neural_network/dataset/23/output/: pose.txt
deep_neural_network/dataset/24/input/: scan.npz
deep_neural_network/dataset/24/output/: pose.txt
deep_neural_network/dataset/26/output/: pose.txt
deep_neural_network/dataset/28/input/: scan.npz
deep_neural_network/dataset/28/output/: pose.txt
global_localization_cnn/: CMakeLists.txt  README.md  package.xml
global_localization_cnn/config/: global_localization_params.yaml
global_localization_cnn/include/global_localization_cnn/: data_processor.hpp  global_localization_node.hpp
global_localization_cnn/launch/: global_localization.launch.py
global_localization_cnn/models/: localization_model.onnx
global_localization_cnn/src/: data_processor.cpp  global_localization_node.cpp
train_deep_neural_network/: collect_dataset.py  convert_to_onnx.py  train_cnn.py
(+195 files in other folders)
